fixed issue for open prompt, disable switch visibility.

--- a/src/app/statistics-settings/statistics-settings.component.sass
+++ b/src/app/statistics-settings/statistics-settings.component.sass
@@ -4,3 +4,5 @@
   margin-left:30px
 .btag
  color: #3ba68c 
+.btn-clr 
+ background-color: #aebaf2
